<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:padding="12dp">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <LinearLayout
                        android:id="@+id/stat_names_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/view_size_1"
                            android:textSize="@dimen/font_size_1"
                            android:text="@string/stat_vitality"
                            android:gravity="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/view_size_1"
                            android:textSize="@dimen/font_size_1"
                            android:text="@string/stat_stamina"
                            android:gravity="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/view_size_1"
                            android:textSize="@dimen/font_size_1"
                            android:text="@string/stat_will"
                            android:gravity="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/view_size_1"
                            android:textSize="@dimen/font_size_1"
                            android:text="@string/stat_strength"
                            android:gravity="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/view_size_1"
                            android:textSize="@dimen/font_size_1"
                            android:text="@string/stat_dexterity"
                            android:gravity="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/view_size_1"
                            android:textSize="@dimen/font_size_1"
                            android:text="@string/stat_intelligence"
                            android:gravity="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/view_size_1"
                            android:textSize="@dimen/font_size_1"
                            android:text="@string/stat_agility"
                            android:gravity="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/view_size_1"
                            android:textSize="@dimen/font_size_1"
                            android:text="@string/stat_perception"
                            android:gravity="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/view_size_1"
                            android:textSize="@dimen/font_size_1"
                            android:text="@string/stat_swiftness"
                            android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="right">

                    <EditText android:id="@+id/vit_edit"
                              android:hint="0"
                              android:textAlignment="center"
                              android:layout_width="@dimen/view_width_1"
                              android:layout_height="@dimen/view_size_1"
                              android:textSize="@dimen/font_size_1"
                              android:inputType="number"
                              android:gravity="center"
                              android:maxLength="2"/>

                    <EditText
                            android:id="@+id/sta_edit"
                            android:hint="0"
                            android:textAlignment="center"
                            android:layout_width="@dimen/view_width_1"
                            android:layout_height="@dimen/view_size_1"
                            android:textSize="@dimen/font_size_1"
                            android:inputType="number"
                            android:gravity="center"
                            android:maxLength="2"/>

                    <EditText android:id="@+id/wil_edit"
                              android:hint="0"
                              android:textAlignment="center"
                              android:layout_width="@dimen/view_width_1"
                              android:layout_height="@dimen/view_size_1"
                              android:textSize="@dimen/font_size_1"
                              android:inputType="number"
                              android:gravity="center"
                              android:maxLength="2"/>

                    <EditText android:id="@+id/str_edit"
                              android:hint="0"
                              android:textAlignment="center"
                              android:layout_width="@dimen/view_width_1"
                              android:layout_height="@dimen/view_size_1"
                              android:textSize="@dimen/font_size_1"
                              android:inputType="number"
                              android:gravity="center"
                              android:maxLength="2"/>

                    <EditText android:id="@+id/dex_edit"
                              android:hint="0"
                              android:textAlignment="center"
                              android:layout_width="@dimen/view_width_1"
                              android:layout_height="@dimen/view_size_1"
                              android:textSize="@dimen/font_size_1"
                              android:inputType="number"
                              android:gravity="center"
                              android:maxLength="2"/>

                    <EditText android:id="@+id/int_edit"
                              android:hint="0"
                              android:textAlignment="center"
                              android:layout_width="@dimen/view_width_1"
                              android:layout_height="@dimen/view_size_1"
                              android:textSize="@dimen/font_size_1"
                              android:inputType="number"
                              android:gravity="center"
                              android:maxLength="2"/>

                    <EditText android:id="@+id/agi_edit"
                              android:hint="0"
                              android:textAlignment="center"
                              android:layout_width="@dimen/view_width_1"
                              android:layout_height="@dimen/view_size_1"
                              android:textSize="@dimen/font_size_1"
                              android:inputType="number"
                              android:gravity="center"
                              android:maxLength="2"/>

                    <EditText android:id="@+id/per_edit"
                              android:hint="0"
                              android:textAlignment="center"
                              android:layout_width="@dimen/view_width_1"
                              android:layout_height="@dimen/view_size_1"
                              android:textSize="@dimen/font_size_1"
                              android:inputType="number"
                              android:gravity="center"
                              android:maxLength="2"/>

                    <EditText android:id="@+id/swi_edit"
                              android:hint="0"
                              android:textAlignment="center"
                              android:layout_width="@dimen/view_width_1"
                              android:layout_height="@dimen/view_size_1"
                              android:textSize="@dimen/font_size_1"
                              android:inputType="number"
                              android:gravity="center"
                              android:maxLength="2"/>

                </LinearLayout>

            </LinearLayout>
            <Button
                    android:id="@+id/calculateBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Oblicz Statystyki"
                    android:textSize="@dimen/font_size_2"/>
            <Button
                    android:id="@+id/resetBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Reset"
                    android:textSize="@dimen/font_size_2"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>